// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic: valid-package.cjs.dev.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = \\"something\\";

exports.default = index;
"
`;

exports[`basic: valid-package.cjs.js 1`] = `
"'use strict';

if (process.env.NODE_ENV === \\"production\\") {
  module.exports = require(\\"./valid-package.cjs.prod.js\\");
} else {
  module.exports = require(\\"./valid-package.cjs.dev.js\\");
}"
`;

exports[`basic: valid-package.cjs.prod.js 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: !0 });
var index = \\"something\\";
exports.default = index;
"
`;

exports[`basic: valid-package.esm.js 1`] = `
"var index = \\"something\\";

export default index;
"
`;

exports[`basic: valid-package.umd.min.js 1`] = `
"!function(e,t){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?module.exports=t():\\"function\\"==typeof define&&define.amd?define(t):e.validPackage=t()}(this,function(){\\"use strict\\";return\\"something\\"});
//# sourceMappingURL=valid-package.umd.min.js.map
"
`;

exports[`basic: valid-package.umd.min.js.map 1`] = `"{\\"version\\":3,\\"file\\":\\"valid-package.umd.min.js\\",\\"sources\\":[\\"../src/index.js\\"],\\"sourcesContent\\":[\\"export default \\\\\\"something\\\\\\";\\\\n\\"],\\"names\\":[],\\"mappings\\":\\"8LAAe\\"}"`;

exports[`clears dist folder: already-has-things-in-dist.cjs.dev.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = \\"something\\";

exports.default = index;
"
`;

exports[`clears dist folder: already-has-things-in-dist.cjs.js 1`] = `
"'use strict';

if (process.env.NODE_ENV === \\"production\\") {
  module.exports = require(\\"./already-has-things-in-dist.cjs.prod.js\\");
} else {
  module.exports = require(\\"./already-has-things-in-dist.cjs.dev.js\\");
}"
`;

exports[`clears dist folder: already-has-things-in-dist.cjs.prod.js 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: !0 });
var index = \\"something\\";
exports.default = index;
"
`;

exports[`clears dist folder: object-assign-installed.cjs.dev.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

var _objectAssign = _interopDefault(require('object-assign'));

var something = _objectAssign({}, {
  something: true
});

exports.something = something;
"
`;

exports[`clears dist folder: object-assign-installed.cjs.js 1`] = `
"'use strict';

if (process.env.NODE_ENV === \\"production\\") {
  module.exports = require(\\"./object-assign-installed.cjs.prod.js\\");
} else {
  module.exports = require(\\"./object-assign-installed.cjs.dev.js\\");
}"
`;

exports[`clears dist folder: object-assign-installed.cjs.prod.js 1`] = `
"\\"use strict\\";
function _interopDefault(ex) {
  return ex && \\"object\\" == typeof ex && \\"default\\" in ex ? ex.default : ex;
}
Object.defineProperty(exports, \\"__esModule\\", { value: !0 });
var _objectAssign = _interopDefault(require(\\"object-assign\\")),
  something = _objectAssign({}, { something: !0 });
exports.something = something;
"
`;

exports[`flow: flow.cjs.dev.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var a = \\"wow\\";

function doSomething(arg) {
  return \\"something\\";
}

exports.doSomething = doSomething;
exports.something = a;
"
`;

exports[`flow: flow.cjs.js 1`] = `
"'use strict';

if (process.env.NODE_ENV === \\"production\\") {
  module.exports = require(\\"./flow.cjs.prod.js\\");
} else {
  module.exports = require(\\"./flow.cjs.dev.js\\");
}"
`;

exports[`flow: flow.cjs.js.flow 1`] = `
"// @flow
export * from \\"../src/index.js\\";
"
`;

exports[`flow: flow.cjs.prod.js 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: !0 });
var a = \\"wow\\";
function doSomething(arg) {
  return \\"something\\";
}
(exports.doSomething = doSomething), (exports.something = a);
"
`;

exports[`flow: flow.esm.js 1`] = `
"var a = \\"wow\\";

function doSomething(arg) {
  return \\"something\\";
}

export { doSomething, a as something };
"
`;

exports[`monorepo: package-one.cjs.dev.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = 1;

exports.default = index;
"
`;

exports[`monorepo: package-one.cjs.js 1`] = `
"'use strict';

if (process.env.NODE_ENV === \\"production\\") {
  module.exports = require(\\"./package-one.cjs.prod.js\\");
} else {
  module.exports = require(\\"./package-one.cjs.dev.js\\");
}"
`;

exports[`monorepo: package-one.cjs.prod.js 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: !0 });
var index = 1;
exports.default = index;
"
`;

exports[`monorepo: package-one.esm.js 1`] = `
"var index = 1;

export default index;
"
`;

exports[`monorepo: package-two.cjs.dev.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = 2;

exports.default = index;
"
`;

exports[`monorepo: package-two.cjs.js 1`] = `
"'use strict';

if (process.env.NODE_ENV === \\"production\\") {
  module.exports = require(\\"./package-two.cjs.prod.js\\");
} else {
  module.exports = require(\\"./package-two.cjs.dev.js\\");
}"
`;

exports[`monorepo: package-two.cjs.prod.js 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: !0 });
var index = 2;
exports.default = index;
"
`;

exports[`monorepo: package-two.esm.js 1`] = `
"var index = 2;

export default index;
"
`;

exports[`no module: no-module.cjs.dev.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = \\"this does not have a module build\\";

exports.default = index;
"
`;

exports[`no module: no-module.cjs.js 1`] = `
"'use strict';

if (process.env.NODE_ENV === \\"production\\") {
  module.exports = require(\\"./no-module.cjs.prod.js\\");
} else {
  module.exports = require(\\"./no-module.cjs.dev.js\\");
}"
`;

exports[`no module: no-module.cjs.prod.js 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: !0 });
var index = \\"this does not have a module build\\";
exports.default = index;
"
`;

exports[`prod checks: prod-checks.cjs.dev.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

function thing() {
  if (process.env.NODE_ENV !== \\"production\\") {
    return \\"not prod\\";
  }

  return \\"prod\\";
}

exports.thing = thing;
"
`;

exports[`prod checks: prod-checks.cjs.js 1`] = `
"'use strict';

if (process.env.NODE_ENV === \\"production\\") {
  module.exports = require(\\"./prod-checks.cjs.prod.js\\");
} else {
  module.exports = require(\\"./prod-checks.cjs.dev.js\\");
}"
`;

exports[`prod checks: prod-checks.cjs.prod.js 1`] = `
"\\"use strict\\";
function thing() {
  return \\"prod\\";
}
Object.defineProperty(exports, \\"__esModule\\", { value: !0 }),
  (exports.thing = thing);
"
`;
